I updated my About Me
I updated my page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html>
 	<head>
 		<title>About Jacquie</title>
-
+			<style>
+			body {
+				text-align: left;
+				background: white;
+				color: pink;
+				font-family: helvetica;
+			}
+			</style
 	</head>
 
 	<body>
@@ -14,7 +21,7 @@
 
 <p>As I learn more about front-end, I hope to one-day work as a creative director for a bigger footwear brand because I like to work with creative people and enjoy being a part of the entire process from conception to development. </p>
 
-<h3>My Experience</h3>
+<h2>My Experience</h2>
 
 <p>This is how I have evolved professionally:</p>
 
@@ -27,11 +34,12 @@ Santa Ana, 2012 - 2013</li>
 
 <li>Branding Intern, Roar Management
 Beverly Hills, 2012</li>
+</ul>
 
-<h4>Education</h4>
-<p>University of Arizona | Eller College of Management – Marketing | 2008 - 2012</p>
+<h2>Education</h2>
+<p>University of Arizona | Eller College of Management - Marketing | 2008 - 2012</p>
 
-<h5>Other</h5>
+<h2>Other</h2>
 
 
 	<p>If you are interested in collaborating with me on a project, feel free to email me at: <a href= "mailto:craftyjacquie@gmail.com"</a>craftyjacquie@gmail.com</p>
