--- a/Food Project.html
+++ b/Food Project.html
@@ -4,7 +4,7 @@
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100,700|Permanent+Marker' rel='stylesheet' type='text/css'>
 	<title>Pinch</title>
-	<link rel="stylesheet" type="text/css" href="style.css" </head>
+	<link rel="stylesheet" type="text/css" href="style copy.css" </head>
 	<body>
 		<div id="nav">
 		<ul>
